<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".PredictActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:paddingRight="10dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/black"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/app_getname"   />


            <Spinner
                android:id="@+id/model_name_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/model_inp_year"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_year"
                android:inputType="number"/>



            <EditText
                android:id="@+id/model_inp_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/model_mileage"
                android:inputType="numberDecimal" />


            <EditText
                android:id="@+id/model_inp_mpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/model_mpg"
                android:inputType="numberDecimal" />


            <EditText
                android:id="@+id/model_inp_enginesize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/model_enginesize"
                android:inputType="numberDecimal" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/radio_grp"
                android:background="#838E8D"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb1"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb3" />
            </RadioGroup>


           <Button
               android:layout_marginTop="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/get_price"
               android:layout_gravity="center"
               android:gravity="center"
               android:id="@+id/get_price_button"/>






        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>