<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221919"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#FBFBFB"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="30sp">

        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_title"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="#414647"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/app_title"
            android:textColor="#ffffff"
            android:textSize="20sp">

        </TextView>

        <ImageButton
            android:id="@+id/start_button"
            style="@style/Widget.AppCompat.ImageButton"

            android:layout_width="80dp"

            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#673AB7"
            android:contentDescription="play"
            android:src="@drawable/ic_baseline_trending_flat_24"

            android:tint="#F4F4F4" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="ABOUT US"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_marginTop="13dp"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="#AA9B9B"
                    android:text="@string/about" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>